force-app/main/default/objects/vlocity_ps__IncidentPartyRelation__c/vlocity_ps__IncidentPartyRelation__c.object-meta.xml
<CustomObject>
    <description>Object to store contacts with various roles that are related to an Incident. Any, one incident will commonly have more than one contact and also the same contact can be associated to more than another Incident, hence many to many relationship</description>
    <label>Incident Party Relationship</label>
    <nameField>
        <label>Incident Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Party Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>