force-app/main/default/objects/vlocity_ps__IncidentPartyRelation__c/fields/vlocity_ps__AccountType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccountType__c</fullName>
    <formula>TEXT(vlocity_ps__PartyId__r.vlocity_ps__AccountId__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>