force-app/main/default/objects/vlocity_ps__IncidentPartyRelation__c/fields/vlocity_ps__Age__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Age__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__ContactId__r.vlocity_ps__Age__c</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>