force-app/main/default/objects/vlocity_ps__IncidentPartyRelation__c/fields/vlocity_ps__HouseholdResidenceType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HouseholdResidenceType__c</fullName>
    <formula>TEXT(vlocity_ps__PartyId__r.vlocity_ps__HouseholdId__r.vlocity_ps__ResidenceType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residence Type</label>
    <type>Text</type>
</CustomField>