force-app/main/default/objects/vlocity_ps__IncidentPartyRelation__c/fields/vlocity_ps__IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsPersonAccount__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__IsPersonAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account</label>
    <type>Checkbox</type>
</CustomField>