force-app/main/default/objects/vlocity_ps__IncidentPartyRelation__c/fields/vlocity_ps__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>vlocity_ps__Party__c</referenceTo>
    <relationshipLabel>Incident Parties</relationshipLabel>
    <relationshipName>IncidentParties</relationshipName>
    <type>Lookup</type>
</CustomField>