force-app/main/default/objects/vlocity_ps__IncidentPartyRelation__c/fields/vlocity_ps__Role__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accused</fullName>
            </value>
            <value>
                <fullName>Investigator</fullName>
            </value>
            <value>
                <fullName>Victim</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Alleged Victim</fullName>
            </value>
            <value>
                <fullName>Alleged Maltreater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>